files/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ms-edms-callback-service
  namespace: service-dev
  labels:
    app: ms-edms-callback
spec:
  ports:
  - name: http
    protocol: TCP
    port: 0
    targetPort: 0
    nodePort: 0
  selector:
    app: ms-edms-callback
  type: ClusterIP
