files/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: config-server
  namespace: service-dev
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  host:  
  path: /
  to:
    kind: Service
    name: config-server
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
